@@ -2,7 +2,6 @@
 {% load i18n field_verbose_name %}
 
 {% block detailspanel %}
-    {{ block.super }}
     <table class="table-striped table-bordered table">
         <tr>
             <th>{{ report|verbose:"name" }}</th>
