@@ -2,8 +2,6 @@
 {% load i18n field_verbose_name %}
 
 {% block detailspanel %}
-    {{ block.super }}
-    
     <table class="table-striped table-bordered table">
         <tr>
             <th>{{ competenceedge|verbose:"organization" }}</th>
@@ -11,4 +9,5 @@
         </tr>
         {% include "mapentity/trackinfo_fragment.html" %}
     </table>
+    {{ block.super }}
 {% endblock detailspanel %}
