@@ -2,7 +2,6 @@
 {% load i18n field_verbose_name %}
 
 {% block detailspanel %}
-    {{ block.super }}
     <table class="table-striped table-bordered table">
         <tr>
             <th>{{ physicaledge|verbose:"physical_type" }}</th>
@@ -10,4 +9,5 @@
         </tr>
         {% include "mapentity/trackinfo_fragment.html" %}
     </table>
+    {{ block.super }}
 {% endblock detailspanel %}
