@@ -21,6 +21,7 @@ CHANGELOG
 * Fix missing translation of "Add a new POI" (fixes #1086)
 * Fix invalid snapping when save path without editing geometry (fixes #1099)
 * Add missing properties in feedback report detail page.
+* Hide all modules information in report detail page.
 
 ** Internal changes **
 
